YAML2/burgers-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: burgers-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: burgers
  template:
    metadata:
      labels:
        app: burgers
    spec:
      containers:
      - name: burgers
        image: valentin117/eatsout:burgers
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hosts-volume
          mountPath: /etc/hosts
      volumes:
          - name: hosts-volume
            configMap:
              name: hosts-configmap
              items:
                - key: hosts
                  path: hosts
