YAML2/pizza-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizza
  template:
    metadata:
      labels:
        app: pizza
    spec:
      containers:
      - name: pizza
        image: valentin117/eatsout:pizza
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hosts-volume
          mountPath: /etc/hosts
      volumes:
      - name: hosts-volume
        configMap:
           name: hosts-configmap
           items:
           - key: hosts
             path: hosts
