YAML2/pizza-services.yml
apiVersion: v1
kind: Service
metadata:
  name: pizza-services
spec:
  selector:
    app: pizza
  ports:
  - name: http
    port: 80
    targetPort: 80
