YAML2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  configManagementPlugin:
    name: configmap
    config:
      name: hosts
  rules:
  - host: pizza.eatsout.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pizza-services
            port:
              number: 80
  - host: tacosetburgers.eatsout.com
    http:
      paths:
      - pathType: Prefix
        path: "/tacos"
        backend:
          service:
            name: tacos-services
            port:
              number: 80
      - pathType: Prefix
        path: "/burgers"
        backend:
          service:
            name: burgers-services
            port:
              number: 80
